--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,6 +17,21 @@
         android:theme="@style/Theme.ProjectKaveretAplication"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ShowRecentEntriesAdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShowBillsAdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddProductAdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditProductAdminActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SortAndFilterActivity"
+            android:exported="false" />
         <activity
             android:name=".ProductDetailsActivity"
             android:exported="false" />
